First day final commit

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
   <!--버튼 부분-->
   <div id="buttonBox" class="buttonBoxStyle">
-    <input type="button" id="button1" value="1">
-    <input type="button" id="button2" value="2">
-    <input type="button" id="button3" value="3">
-    <input type="button" id="button4" value="4">
-    <input type="button" id="button5" value="5">
-    <input type="button" id="button6" value="6">
+    <input type="button" id="button1" value="Left">
+    <input type="button" id="button2" value="Right">
+    <input type="button" id="button3" value="Select">
+    <input type="button" id="button4" value="Set">
+    <input type="button" id="button5" value="Up">
+    <input type="button" id="button6" value="Down">
   </div> <br>
 
 </body>
