--- a/index.html
+++ b/index.html
@@ -8,20 +8,15 @@
   <script src="AlarmClock.js"></script>
 </head>
 <body>
-  <!--시계 부분-->
-  <div id="clockBox" class="clockBoxStyle">
-    
-    <div id="textBox" class="textBoxStyle">
-      <input type="text" class="smallTextBoxStyle" id="smallTextBox" placeholder="원하는 문구를 입력하세요">
-    </div> <br>
+  
+  <!-- <div id="clockBox" class="clockBoxStyle">
 
     <div id="alarmBox" class="alarmBoxStyle">
-      <p id="clock"></p>
+      <p id="clock"> am 12 : 00 : 01</p>
     </div>
   
-  </div> <br>
+  </div>
 
-  <!--버튼 부분-->
   <div id="buttonBox" class="buttonBoxStyle">
     <input type="button" id="button1" value="Left">
     <input type="button" id="button2" value="Right">
@@ -29,7 +24,10 @@
     <input type="button" id="button4" value="Set">
     <input type="button" id="button5" value="Up">
     <input type="button" id="button6" value="Down">
-  </div> <br>
+  </div> <br> -->
+
+  <div id="time" class="timeStyle"></div>
+  <div id="date" class="dateStyle"></div>
 
 </body>
 </html>
