--- a/index.html
+++ b/index.html
@@ -8,26 +8,20 @@
   <script src="AlarmClock.js"></script>
 </head>
 <body>
-  
-  <!-- <div id="clockBox" class="clockBoxStyle">
 
-    <div id="alarmBox" class="alarmBoxStyle">
-      <p id="clock"> am 12 : 00 : 01</p>
-    </div>
-  
+  <div id="modeShow" class="modeShowStyle">
+    모드 : 
   </div>
 
-  <div id="buttonBox" class="buttonBoxStyle">
-    <input type="button" id="button1" value="Left">
-    <input type="button" id="button2" value="Right">
-    <input type="button" id="button3" value="Select">
-    <input type="button" id="button4" value="Set">
-    <input type="button" id="button5" value="Up">
-    <input type="button" id="button6" value="Down">
-  </div> <br> -->
-
   <div id="time" class="timeStyle"></div>
-  <div id="date" class="dateStyle"></div>
+  <div id="date" class="dateStyle"></div> 
+
+  <span>
+    <input type="button" id="button_1" class="buttonStyle" value="MODE">
+    <input type="button" id="button_2" class="buttonStyle" value="SET">
+    <input type="button" id="button_3" class="buttonStyle" value="UP">
+    <input type="button" id="button_4" class="buttonStyle" value="DOWN">
+  </span>
 
 </body>
 </html>
