--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <div id="buttonArea" class="buttonAreaStyle">
       <input type="button" id="button_1" class="buttonStyle" value="MODE" onclick="mode_Button()">
-      <input type="button" id="button_2" class="buttonStyle" value="MOVE" onclick="move_Button()">
-      <input type="button" id="button_3" class="buttonStyle" value="SET" onclick="set_Button()">
-      <input type="button" id="button_4" class="buttonStyle" value="UP" onclick="up_Button()">
-      <input type="button" id="button_5" class="buttonStyle" value="DOWN" onclick="down_Button()">
+      <input type="button" id="button_2" class="buttonStyle" value="    " onclick="move_Button()">
+      <input type="button" id="button_3" class="buttonStyle" value="    " onclick="set_Button()">
+      <input type="button" id="button_4" class="buttonStyle" value="    " onclick="up_Button()">
+      <input type="button" id="button_5" class="buttonStyle" value="    " onclick="down_Button()">
     </div>
      
   </div> <br>
